# katran

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  EXAMPLE.md  README.md  USAGE.md  build.sh  build_bpf_modules_opensource.sh  build_custom_katran.sh  build_katran.sh  build_katran_centos.sh  build_katran_ubuntu.sh  collect_debug_lb.sh  collect_debug_real.sh  get_repos.sh  getdeps.sh  install_xdproot.sh  os_run_tester.sh  start_katran_grpc_server.sh  start_katran_simple_server.sh
cmake/: FindBpfObject.cmake  KatranTest.cmake  katran-config.cmake.in
example/: CMakeLists.txt  KatranSimpleServer.cpp  KatranSimpleServiceHandler.cpp  KatranSimpleServiceHandler.h  KatranSimpleServiceSignalHandler.cpp  KatranSimpleServiceSignalHandler.h  katran.thrift
example/client/: KatranSimpleClient.cpp  KatranSimpleClient.h  Main.cpp
example_grpc/: CMakeLists.txt  GrpcSignalHandler.cpp  GrpcSignalHandler.h  KatranGrpcService.cpp  KatranGrpcService.h  build_grpc_client.sh  katran_server.cpp
example_grpc/goclient/src/katranc/katranc/: katranc.go
example_grpc/goclient/src/katranc/main/: main.go
example_grpc/protos/: katran.proto
katran/: .clang-format  CMakeLists.txt  OSS_SYNC
katran/decap/: CMakeLists.txt  Makefile-bpf  XdpDecap.cpp  XdpDecap.h  XdpDecapStructs.h
katran/decap/bpf/: decap.bpf.c  decap_kern.c  decap_maps.h
katran/decap/tc_bpf/: pckt_helpers.h  tc_decap.bpf.c  tc_decap_info.bpf.c  tc_decap_info_maps.h  tc_decap_info_user_structs.h  tc_decap_kern.c  tc_decap_kern_helpers.h  tc_decap_maps.h  tc_decap_stats.bpf.c  tc_decap_stats_maps.h  tc_srcmatch.bpf.c
katran/decap/testing/: CMakeLists.txt  TcSrcMatchTestFixtures.h  XdpDecapGueTestFixtures.h  XdpDecapTestFixtures.h  tc_srcmatch_tester.cpp  xdpdecap_tester.cpp
katran/lib/: BalancerStructs.h  BaseBpfAdapter.cpp  BaseBpfAdapter.h  BpfAdapter.cpp  BpfAdapter.h  BpfBatchUtil.h  BpfLoader.cpp  BpfLoader.h  BpfLoaderStructs.h  ByteRangeWriter.cpp  ByteRangeWriter.h  CHHelpers.cpp  CHHelpers.h  CMakeLists.txt  DataWriter.h  EventPipeCallback.cpp  EventPipeCallback.h  FileWriter.cpp  FileWriter.h  IOBufWriter.cpp  IOBufWriter.h  IpHelpers.cpp  IpHelpers.h  KatranEventReader.cpp  KatranEventReader.h  KatranLb.cpp  KatranLb.h  KatranLbStructs.h  KatranMonitor.cpp  KatranMonitor.h  KatranSimulator.cpp  KatranSimulator.h  KatranSimulatorUtils.cpp  KatranSimulatorUtils.h  MacHelpers.cpp  MacHelpers.h  MaglevBase.cpp  MaglevBase.h  MaglevHash.cpp  MaglevHash.h  (+27 more)
katran/lib/bpf/: adapter_integration_test_kern.c  balancer.bpf.c  balancer_consts.h  balancer_helpers.h  balancer_kern-tpl.h  balancer_kern.c  balancer_kern_flavors-tpl.h  balancer_maps.h  balancer_structs.h  control_data_maps.h  csum_helpers.h  encap_helpers.h  flow_debug.h  flow_debug_helpers.h  flow_debug_maps.h  handle_icmp.h  healthchecking-tpl.h  healthchecking.bpf.c  healthchecking_consts.h  healthchecking_helpers.h  healthchecking_ipip.c  healthchecking_kern.c  healthchecking_maps.h  healthchecking_structs.h  introspection.h  pckt_encap.h  pckt_parsing.h  xdp_pktcntr.c  xdp_root.c
katran/lib/linux_includes/: bpf.h  bpf_common.h  bpf_endian.h  bpf_helpers.h  jhash.h  libbpf.c  libbpf.h
katran/lib/testing/: Base64Helpers.cpp  Base64Helpers.h  Base64Test.cpp  BpfTester.cpp  BpfTester.h  CMakeLists.txt  KatranDecapStatsTestFixtures.h  KatranGueOptionalTestFixtures.h  KatranGueTestFixtures.h  KatranHCTestFixtures.h  KatranIcmpTooBigTestFixtures.h  KatranLpmSrcLookupTestFixtures.h  KatranOptionalTestFixtures.h  KatranTPRTestFixtures.h  KatranTestFixtures.h  KatranTestPacketGenerator.h  KatranTestProvision.cpp  KatranTestProvision.h  KatranTestUtil.cpp  KatranTestUtil.h  KatranUdpFlowMigrationTestFixtures.h  KatranUdpStableRtTestFixtures.h  KatranXPopDecapTestFixtures.h  PacketAttributes.h  PacketBuilder.cpp  PacketBuilder.h  PacketBuilderTest.cpp  PcapParser.cpp  PcapParser.h  PcapStructs.h  README  TARGETS  XdpTester.cpp  XdpTester.h  fplane_testing.py  katran_tester.cpp
katran/lib/testing/fixtures/: KatranCidrVipTestFixtures.h  KatranDecapStatsTestFixtures.h  KatranEgressDecapTestFixtures.h  KatranGueTestFixtures.h  KatranHCTestFixtures.h  KatranIcmpTooBigTestFixtures.h  KatranLpmSrcLookupTestFixtures.h  KatranOptionalTestFixtures.h  KatranTPRTestFixtures.h  KatranTestFixtures.h  KatranUdpFlowMigrationTestFixtures.h  KatranUdpStableRtTestFixtures.h  KatranXPopDecapTestFixtures.h
katran/lib/testing/framework/: BpfTester.cpp  BpfTester.h  katran_tester.cpp
katran/lib/testing/python/: fplane_testing.py
katran/lib/testing/tools/: PacketAttributes.h  PacketBuilder.cpp  PacketBuilder.h  PacketBuilderTest.cpp  PcapParser.cpp
katran/lib/testing/utils/: Base64Helpers.cpp  Base64Test.cpp  KatranTestProvision.cpp  KatranTestProvision.h  KatranTestUtil.cpp  KatranTestUtil.h
katran/lib/tests/: BpfLoaderTest.cpp  CHHelpersTest.cpp  CMakeLists.txt  DataWriterTest.cpp  EventPipeCallbackTest.cpp  IpHelpersTest.cpp  KatranEventReaderTest.cpp  KatranLbTest.cpp  KatranSimulatorUtilsTest.cpp  MacHelpersTest.cpp  MaglevBaseTest.cpp  MaglevHashTest.cpp  MonitoringServiceCoreTest.cpp  MonitoringStructsTest.cpp  MurmurHash3Test.cpp  PcapMsgTest.cpp  PcapWriterTest.cpp  PipeWriterTest.cpp  TARGETS  VipTest.cpp
katran/lib/tests/common/: TestMain.cpp
katran/tpr/: CMakeLists.txt  README  TPRStatsPoller.cpp  TPRStatsPoller.h  TPRTypes.h  TcpPktRouter.cpp  TcpPktRouter.h  TprBpfAdapter.cpp  TprBpfAdapter.h
katran/tpr/bpf/: TcpPktRouterBpf-tpl.h  bpf_endian.h  tcp_pkt_router.bpf.c  tcp_pkt_router_active_hdlr.h  tcp_pkt_router_common.h  tcp_pkt_router_consts.h  tcp_pkt_router_kern.c  tcp_pkt_router_maps.h  tcp_pkt_router_passive_hdlr.h  tcp_pkt_router_structs.h  vmlinux.h
katran/tpr/bpf_util/: BpfSkeleton.h  BpfUtil.cpp  BpfUtil.h  CMakeLists.txt  SystemError.h
tools/xdpdump/: CMakeLists.txt  PcapMsg.cpp  PcapMsg.h  PcapStructs.h  PcapWriter.cpp  PcapWriter.h  README.md  XdpDump.cpp  XdpDump.h  XdpDumpKern.h  XdpDumpStructs.h  XdpEventLogger.cpp  XdpEventLogger.h  XdpEventReader.cpp  XdpEventReader.h  xdpdump_tool.cpp
(+20 files in other folders)
